[gd_scene load_steps=65 format=3 uid="uid://cp1taopkiaubn"]

[ext_resource type="Script" path="res://SCripts/mmx.gd" id="1_bjuxh"]
[ext_resource type="Texture2D" uid="uid://bapfjbjraavp3" path="res://Sprites/Player/MMX Spritesheet.png" id="1_vsw34"]
[ext_resource type="PackedScene" uid="uid://dsbbg0d7q4pma" path="res://Scenes/Player/x_buster.tscn" id="3_o60g5"]
[ext_resource type="PackedScene" uid="uid://3k7ec7wx6hrb" path="res://StateMachine/state_machine.tscn" id="3_r7y4i"]
[ext_resource type="Script" path="res://Scenes/Player/MovementComponent.gd" id="4_bs4rq"]
[ext_resource type="Script" path="res://Scenes/Player/Idle.gd" id="4_g4pbo"]
[ext_resource type="Script" path="res://Resources/PlayerMovementData.gd" id="5_aapas"]
[ext_resource type="Script" path="res://Scenes/Player/Run.gd" id="6_j1sur"]
[ext_resource type="Script" path="res://Scenes/Player/Jump.gd" id="7_58kuq"]
[ext_resource type="Script" path="res://Scenes/Player/Fall.gd" id="8_an1e2"]
[ext_resource type="Script" path="res://Scenes/Player/Dash.gd" id="9_33p7t"]
[ext_resource type="Script" path="res://Scenes/Player/DashJump.gd" id="10_0vfhg"]
[ext_resource type="Script" path="res://Scenes/Player/DashFall.gd" id="11_3cpw0"]
[ext_resource type="Script" path="res://Scenes/Player/WallSlide.gd" id="12_xp38g"]
[ext_resource type="Script" path="res://Scenes/Player/WallJump.gd" id="13_ma2ia"]
[ext_resource type="Script" path="res://Scenes/Player/DashWallJump.gd" id="14_l3gxi"]
[ext_resource type="PackedScene" uid="uid://du2ntcuu5snff" path="res://StateMachine/attack_machine.tscn" id="15_0h6pj"]
[ext_resource type="Script" path="res://Scenes/Player/Stagger.gd" id="16_5bknb"]
[ext_resource type="Script" path="res://Scenes/Player/IdleShoot.gd" id="16_f68vu"]
[ext_resource type="Script" path="res://Scenes/Player/IdleShot.gd" id="17_apale"]
[ext_resource type="PackedScene" uid="uid://u6hjnq4ludvc" path="res://Scenes/InheritanceScenes/hurt_box_component.tscn" id="20_h4km2"]
[ext_resource type="Script" path="res://Scenes/Player/Charging.gd" id="20_iarpn"]

[sub_resource type="Resource" id="Resource_mc3o2"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0o4md"]
size = Vector2(16, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2rw6"]
size = Vector2(16, 14)

[sub_resource type="Animation" id="Animation_oi4vv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_b2vqt"]
resource_name = "dash"
length = 0.1
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_dust_effect"
}]
}

[sub_resource type="Animation" id="Animation_347f0"]
resource_name = "dash_enter"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_rd1t4"]
resource_name = "dash_shoot"
length = 0.48
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_a4qtw"]
resource_name = "idle"
length = 1.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 11]
}

[sub_resource type="Animation" id="Animation_47spv"]
resource_name = "idle_hurt"
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 59, 58, 57]
}

[sub_resource type="Animation" id="Animation_6c62t"]
resource_name = "idle_shoot"
length = 0.48
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [30, 31]
}

[sub_resource type="Animation" id="Animation_a30sq"]
resource_name = "jump_fall"
length = 0.2
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [16, 17, 18]
}

[sub_resource type="Animation" id="Animation_oq2x2"]
resource_name = "jump_fall_shoot"
length = 0.2
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [43, 44, 45]
}

[sub_resource type="Animation" id="Animation_tvr1e"]
resource_name = "jump_rise"
length = 0.48
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [13, 14, 15]
}

[sub_resource type="Animation" id="Animation_yav8j"]
resource_name = "jump_rise_shoot"
length = 0.48
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [40, 41, 42]
}

[sub_resource type="Animation" id="Animation_6cffm"]
resource_name = "run"
length = 0.5
loop_mode = 1
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_my863"]
resource_name = "run_shoot"
length = 0.48
loop_mode = 1
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_rnd75"]
resource_name = "stagger"
length = 0.15
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [52, 53]
}

[sub_resource type="Animation" id="Animation_bcmey"]
resource_name = "wall_enter"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_1bbv2"]
resource_name = "wall_jump"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 15]
}

[sub_resource type="Animation" id="Animation_7jhan"]
resource_name = "wall_jump_shoot"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [49, 50, 51, 42]
}

[sub_resource type="Animation" id="Animation_kwgor"]
resource_name = "wall_shoot"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [47]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"wall_dust_effect"
}]
}

[sub_resource type="Animation" id="Animation_apljj"]
resource_name = "wall_slide"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"wall_dust_effect"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lfpgc"]
_data = {
"RESET": SubResource("Animation_oi4vv"),
"dash": SubResource("Animation_b2vqt"),
"dash_enter": SubResource("Animation_347f0"),
"dash_shoot": SubResource("Animation_rd1t4"),
"idle": SubResource("Animation_a4qtw"),
"idle_hurt": SubResource("Animation_47spv"),
"idle_shoot": SubResource("Animation_6c62t"),
"jump_fall": SubResource("Animation_a30sq"),
"jump_fall_shoot": SubResource("Animation_oq2x2"),
"jump_rise": SubResource("Animation_tvr1e"),
"jump_rise_shoot": SubResource("Animation_yav8j"),
"run": SubResource("Animation_6cffm"),
"run_shoot": SubResource("Animation_my863"),
"stagger": SubResource("Animation_rnd75"),
"wall_enter": SubResource("Animation_bcmey"),
"wall_jump": SubResource("Animation_1bbv2"),
"wall_jump_shoot": SubResource("Animation_7jhan"),
"wall_shoot": SubResource("Animation_kwgor"),
"wall_slide": SubResource("Animation_apljj")
}

[sub_resource type="Animation" id="Animation_iqbvb"]
resource_name = "instatiation"
length = 0.48
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"wall_dust_effect"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_84ifs"]
_data = {
"instatiation": SubResource("Animation_iqbvb")
}

[sub_resource type="Resource" id="Resource_j63me"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_kmnsh"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_mnj4p"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_mkaus"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_1er5v"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_yyvhm"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_um671"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_q6v7v"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_46uwv"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_rj11c"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_kji87"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_d2bwb"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_4x8dk"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="Resource" id="Resource_cdj88"]
script = ExtResource("5_aapas")
move_speed = 90.0
jump_velocity = 312.0
gravity_scale = 1.0
dash_speed = 245.0
gravity = 900
max_fall_speed = 375.0
climb_speed = 90.0
max_wall_speed = 90.0

[sub_resource type="LabelSettings" id="LabelSettings_n52ng"]
font_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_s3e2d"]
font_size = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rnrv5"]
size = Vector2(12, 22)

[node name="MMX" type="CharacterBody2D"]
z_index = 25
collision_layer = 2
script = ExtResource("1_bjuxh")
movement_data = SubResource("Resource_mc3o2")
dev_menu = false

[node name="X_Buster" parent="." instance=ExtResource("3_o60g5")]

[node name="XSprite" type="Sprite2D" parent="."]
position = Vector2(1, -16)
texture = ExtResource("1_vsw34")
hframes = 10
vframes = 6
frame = 10

[node name="VerticalCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, -12.5)
shape = SubResource("RectangleShape2D_0o4md")

[node name="HorizontalCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, -7)
shape = SubResource("RectangleShape2D_g2rw6")
disabled = true

[node name="CharacterAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lfpgc")
}

[node name="DustAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_84ifs")
}

[node name="StateMachine" parent="." node_paths=PackedStringArray("init_state") instance=ExtResource("3_r7y4i")]
init_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "jump_state", "fall_state", "dash_state")]
script = ExtResource("4_g4pbo")
idle_state = NodePath(".")
run_state = NodePath("../Run")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
dash_state = NodePath("../Dash")
movement_data = SubResource("Resource_j63me")
animation_name = "idle"

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "jump_state", "fall_state", "dash_state")]
script = ExtResource("6_j1sur")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
dash_state = NodePath("../Dash")
movement_data = SubResource("Resource_kmnsh")
animation_name = "run"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("run_state", "idle_state", "fall_state")]
script = ExtResource("7_58kuq")
run_state = NodePath("../Run")
idle_state = NodePath("../Idle")
fall_state = NodePath("../Fall")
movement_data = SubResource("Resource_mnj4p")
animation_name = "jump_rise"

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "jump_state", "wall_slide_state", "wall_jump_state", "dash_wall_state")]
script = ExtResource("8_an1e2")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
jump_state = NodePath("../Jump")
wall_slide_state = NodePath("../WallSlide")
wall_jump_state = NodePath("../WallJump")
dash_wall_state = NodePath("../DashWallJump")
movement_data = SubResource("Resource_mkaus")
animation_name = "jump_fall"

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "fall_state", "dash_state", "dash_jump_state")]
script = ExtResource("9_33p7t")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
fall_state = NodePath("../Fall")
dash_state = NodePath(".")
dash_jump_state = NodePath("../DashJump")
movement_data = SubResource("Resource_1er5v")
animation_name = "dash"

[node name="DashJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "run_state", "dash_fall_state")]
script = ExtResource("10_0vfhg")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
dash_fall_state = NodePath("../DashFall")
movement_data = SubResource("Resource_yyvhm")
animation_name = "jump_rise"

[node name="DashFall" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "jump_state", "fall_state", "wall_slide_state", "wall_jump_state", "dash_wall_state")]
script = ExtResource("11_3cpw0")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
wall_slide_state = NodePath("../WallSlide")
wall_jump_state = NodePath("../WallJump")
dash_wall_state = NodePath("../DashWallJump")
movement_data = SubResource("Resource_um671")
animation_name = "jump_fall"

[node name="WallSlide" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "run_state", "idle_state", "wall_jump_state", "dash_wall_state", "wall_slide_state")]
script = ExtResource("12_xp38g")
fall_state = NodePath("../Fall")
run_state = NodePath("../Run")
idle_state = NodePath("../Idle")
wall_jump_state = NodePath("../WallJump")
dash_wall_state = NodePath("../DashWallJump")
wall_slide_state = NodePath(".")
movement_data = SubResource("Resource_q6v7v")
animation_name = "wall_slide"

[node name="WallJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state")]
script = ExtResource("13_ma2ia")
fall_state = NodePath("../Fall")
air_time = 0.1
movement_data = SubResource("Resource_46uwv")
animation_name = "wall_jump"

[node name="DashWallJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash_fall_state")]
script = ExtResource("14_l3gxi")
dash_fall_state = NodePath("../DashFall")
air_time = 0.15
movement_data = SubResource("Resource_rj11c")
animation_name = "jump_rise"

[node name="Stagger" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "run_state", "jump_state", "fall_state")]
script = ExtResource("16_5bknb")
knockback_timer = 0.15
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
movement_data = SubResource("Resource_kji87")
animation_name = "stagger"

[node name="AttackMachine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("15_0h6pj")]
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="AttackMachine" node_paths=PackedStringArray("shooting_state", "charging_state")]
script = ExtResource("16_f68vu")
shooting_state = NodePath("../Shooting")
charging_state = NodePath("../Charging")
movement_data = SubResource("Resource_d2bwb")

[node name="Shooting" type="Node" parent="AttackMachine" node_paths=PackedStringArray("idle_state", "shooting_state", "charging_state")]
script = ExtResource("17_apale")
idle_state = NodePath("../Idle")
shooting_state = NodePath(".")
charging_state = NodePath("../Charging")
movement_data = SubResource("Resource_4x8dk")

[node name="Charging" type="Node" parent="AttackMachine" node_paths=PackedStringArray("idle_state", "shooting_state")]
script = ExtResource("20_iarpn")
idle_state = NodePath("../../StateMachine/Idle")
shooting_state = NodePath("../Shooting")
movement_data = SubResource("Resource_cdj88")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_bs4rq")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DustPoint" type="Marker2D" parent="."]
position = Vector2(-10, -2)

[node name="DustPoint2" type="Marker2D" parent="."]
position = Vector2(10, -2)

[node name="WallDust" type="Marker2D" parent="."]
position = Vector2(-7, -12)

[node name="WallDust2" type="Marker2D" parent="."]
position = Vector2(10, -12)

[node name="WallKick" type="Marker2D" parent="."]
position = Vector2(9, -7)

[node name="WallKick2" type="Marker2D" parent="."]
position = Vector2(-7, -7)

[node name="Labels" type="Node2D" parent="."]
visible = false
position = Vector2(0, -10)

[node name="Label" type="Label" parent="Labels"]
offset_left = -159.0
offset_top = 60.0
offset_right = -107.0
offset_bottom = 79.0
text = "Test"
label_settings = SubResource("LabelSettings_n52ng")

[node name="Label6" type="Label" parent="Labels"]
offset_left = -159.0
offset_top = 53.0
offset_right = -107.0
offset_bottom = 72.0
text = "Test"
label_settings = SubResource("LabelSettings_n52ng")

[node name="Label2" type="Label" parent="Labels"]
offset_left = -159.0
offset_top = 68.0
offset_right = -107.0
offset_bottom = 87.0
text = "Test"
label_settings = SubResource("LabelSettings_n52ng")

[node name="Label3" type="Label" parent="Labels"]
offset_left = -159.0
offset_top = 75.0
offset_right = -119.0
offset_bottom = 91.0
text = "Test"
label_settings = SubResource("LabelSettings_s3e2d")

[node name="Label4" type="Label" parent="Labels"]
offset_left = -159.0
offset_top = 83.0
offset_right = -119.0
offset_bottom = 99.0
text = "Test"
label_settings = SubResource("LabelSettings_s3e2d")

[node name="Label5" type="Label" parent="Labels"]
offset_left = -159.0
offset_top = 90.0
offset_right = -119.0
offset_bottom = 106.0
text = "Test"
label_settings = SubResource("LabelSettings_s3e2d")

[node name="Timers" type="Node" parent="."]

[node name="FireRate" type="Timer" parent="Timers"]
wait_time = 0.14
one_shot = true

[node name="AttackAnimTimer" type="Timer" parent="Timers"]
wait_time = 0.48
one_shot = true

[node name="DustTimer" type="Timer" parent="Timers"]
wait_time = 0.2
autostart = true

[node name="GhostTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.12

[node name="HurtBoxComponent" parent="." instance=ExtResource("20_h4km2")]
visible = false
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(1, -11)
shape = SubResource("RectangleShape2D_rnrv5")

[connection signal="timeout" from="Timers/GhostTimer" to="." method="_on_ghost_timer_timeout"]
